--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -52,7 +52,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/gray"
@@ -64,11 +64,45 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
             android:clickable="true"
             android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/imageBlock"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/imageTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="16dp"
+                    android:text="Images"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <com.example.poppop.Utils.ExpandableHeightGridView
+                    android:id="@+id/gridView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:horizontalSpacing="8dp"
+                    android:isScrollContainer="false"
+                    android:numColumns="3"
+                    android:stretchMode="columnWidth"
+                    android:verticalSpacing="8dp"
+                    />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/aboutMe_layout"
@@ -95,11 +129,11 @@
                     android:layout_marginTop="10dp"
                     android:background="@color/white"
                     android:hint="Tell more about yourself..."
-                    android:textColorHint="@color/dark_gray"
                     android:inputType="text"
-                    android:textColor="@color/dark_gray"
                     android:minHeight="48dp"
-                    android:paddingHorizontal="16dp" />
+                    android:paddingHorizontal="16dp"
+                    android:textColor="@color/dark_gray"
+                    android:textColorHint="@color/dark_gray" />
             </LinearLayout>
 
             <LinearLayout
@@ -152,24 +186,25 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+
                 <LinearLayout
                     android:id="@+id/genderPrefBlock"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
+                    android:layout_gravity="center"
                     android:layout_marginTop="10dp"
 
-                    android:paddingHorizontal="16dp"
-                    android:layout_gravity="center"
+                    android:background="@drawable/textview_background_selector"
                     android:clickable="true"
-                    android:background="@drawable/textview_background_selector">
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="16dp">
 
                     <TextView
                         android:id="@+id/genderPrefValue"
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
-                        android:layout_weight="1"
                         android:layout_centerHorizontal="true"
+                        android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:text="Everyone"
                         android:textColor="@color/dark_gray"
@@ -183,7 +218,6 @@
                         android:background="?attr/selectableItemBackground"
                         android:contentDescription="Edit"
                         android:src="@drawable/icon_next" />
-
 
 
                 </LinearLayout>
@@ -223,7 +257,7 @@
                         android:gravity="right|center"
                         android:textColor="@color/black"
                         android:textSize="18sp"
-                        android:textStyle="bold"  />
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <com.google.android.material.slider.RangeSlider
@@ -231,12 +265,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:background="@color/white"
                     android:stepSize="1"
                     android:valueFrom="18"
                     android:valueTo="60"
                     app:labelBehavior="gone"
-                    app:values="@array/initial_slider_values"
-                    android:background="@color/white"/>
+                    app:values="@array/initial_slider_values" />
 
             </LinearLayout>
 
@@ -271,7 +305,7 @@
                         android:gravity="right|center"
                         android:textColor="@color/black"
                         android:textSize="18sp"
-                        android:textStyle="bold"  />
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <com.google.android.material.slider.Slider
@@ -279,12 +313,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:background="@color/white"
                     android:stepSize="1"
                     android:valueFrom="2"
                     android:valueTo="50"
-                    app:labelBehavior="gone"
-                    android:background="@color/white"/>
+                    app:labelBehavior="gone" />
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/basicInfo_layout"
                 android:layout_width="match_parent"
@@ -307,11 +342,11 @@
                     android:id="@+id/nameBlock"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
                     android:layout_marginTop="10dp"
+                    android:background="@drawable/textview_background_selector"
+                    android:orientation="horizontal"
                     android:paddingHorizontal="16dp"
-                    android:paddingVertical="10dp"
-                    android:background="@drawable/textview_background_selector">
+                    android:paddingVertical="10dp">
 
                     <TextView
                         android:id="@+id/nameTextView"
@@ -319,21 +354,21 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Name"
-                        android:textSize="16sp"
                         android:textColor="@color/black"
-                        android:textStyle="bold"/>
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <!-- Value TextView -->
                     <EditText
                         android:id="@+id/nameValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAlignment="viewEnd"
-                        android:inputType="text"
-                        android:textSize="16sp"
-                        android:textColor="@color/dark_gray"
                         android:background="@color/white"
-                        android:clickable="false"/>
+                        android:clickable="false"
+                        android:inputType="text"
+                        android:textAlignment="viewEnd"
+                        android:textColor="@color/dark_gray"
+                        android:textSize="16sp" />
 
                     <!-- Edit ImageButton -->
                     <ImageButton
@@ -341,21 +376,22 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:src="@drawable/icon_next"
-                        android:contentDescription="Edit"
                         android:layout_gravity="center"
-                        android:background="?attr/selectableItemBackground"/>
+                        android:layout_marginStart="8dp"
+                        android:background="?attr/selectableItemBackground"
+                        android:contentDescription="Edit"
+                        android:src="@drawable/icon_next" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/ageBlock"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
+                    android:background="@color/white"
 
+                    android:orientation="horizontal"
                     android:paddingHorizontal="16dp"
-                    android:paddingVertical="10dp"
-                    android:background="@color/white">
+                    android:paddingVertical="10dp">
 
                     <TextView
                         android:id="@+id/ageTextView"
@@ -364,9 +400,9 @@
                         android:layout_weight="1"
                         android:text="Age"
 
-                        android:textSize="16sp"
                         android:textColor="@color/black"
-                        android:textStyle="bold"/>
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <!-- Value TextView -->
                     <TextView
@@ -375,13 +411,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:textColor="@color/dark_gray"
-                        android:textSize="16sp"/>
+                        android:textSize="16sp" />
 
                     <NumberPicker
                         android:id="@+id/ageNumberPicker"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <!-- Edit ImageButton -->
                     <ImageButton
@@ -396,14 +432,15 @@
                         android:src="@drawable/icon_next"
                         tools:ignore="TouchTargetSizeCheck" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/genderBlock"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/white"
                     android:orientation="horizontal"
                     android:paddingHorizontal="16dp"
-                    android:paddingVertical="10dp"
-                    android:background="@color/white">
+                    android:paddingVertical="10dp">
 
                     <TextView
                         android:id="@+id/genderTextView"
@@ -412,9 +449,9 @@
                         android:layout_weight="1"
                         android:text="Gender"
 
-                        android:textSize="16sp"
                         android:textColor="@color/black"
-                        android:textStyle="bold"/>
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <!-- Value TextView -->
                     <TextView
@@ -423,7 +460,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:textColor="@color/dark_gray"
-                        android:textSize="16sp"/>
+                        android:textSize="16sp" />
 
                     <!-- Edit ImageButton -->
                     <ImageButton
@@ -437,14 +474,15 @@
                         android:src="@drawable/icon_next"
                         tools:ignore="TouchTargetSizeCheck" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/horoSignBlock"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/white"
                     android:orientation="horizontal"
                     android:paddingHorizontal="16dp"
-                    android:paddingVertical="10dp"
-                    android:background="@color/white">
+                    android:paddingVertical="10dp">
 
                     <TextView
                         android:id="@+id/HoroSignTextView"
@@ -452,9 +490,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Horoscope Sign"
-                        android:textSize="16sp"
                         android:textColor="@color/black"
-                        android:textStyle="bold"/>
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <!-- Value TextView -->
                     <TextView
@@ -463,7 +501,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:textColor="@color/dark_gray"
-                        android:textSize="16sp"/>
+                        android:textSize="16sp" />
 
                     <Spinner
                         android:id="@+id/HoroSignSpinner"
@@ -472,18 +510,18 @@
                         android:layout_marginStart="8dp"
                         android:textColor="@color/dark_gray"
                         android:textSize="16sp"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <!-- Edit ImageButton -->
                     <ImageButton
                         android:id="@+id/editHoroSignBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:src="@drawable/icon_next"
-                        android:contentDescription="Edit"
                         android:layout_gravity="center"
-                        android:background="?attr/selectableItemBackground"/>
+                        android:layout_marginStart="8dp"
+                        android:background="?attr/selectableItemBackground"
+                        android:contentDescription="Edit"
+                        android:src="@drawable/icon_next" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -491,10 +529,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/profile_revertBtn"
@@ -510,15 +548,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginVertical="5dp"
-                    android:text="Save"
                     android:backgroundTint="@color/purple_200"
-                    />
+                    android:text="Save" />
 
             </LinearLayout>
 
 
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
