--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -7,11 +7,17 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/textViewUserName"
+        android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/banBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ban" />
 
     <!-- Add more UI elements to display other user details as needed -->
 
