--- a/app/src/main/res/layout/activity_boarding_gender.xml
+++ b/app/src/main/res/layout/activity_boarding_gender.xml
@@ -42,7 +42,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="40dp"
-        android:src="@drawable/gender"
+        android:src="@drawable/gender_topim"
         android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
