--- a/app/src/main/res/layout/activity_boarding_name.xml
+++ b/app/src/main/res/layout/activity_boarding_name.xml
@@ -12,7 +12,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="80dp"
-        android:src="@drawable/studentcard"
+        android:src="@drawable/user1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
