--- a/app/src/main/res/layout/activity_horoscope_boarding.xml
+++ b/app/src/main/res/layout/activity_horoscope_boarding.xml
@@ -5,64 +5,112 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".boardingpages.horoscopeBoarding">
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+
             <ImageView
                 android:id="@+id/boardingHoroImage"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="40dp"
                 android:src="@drawable/constellations"
-                android:layout_gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
 
+                <NumberPicker
+                    android:id="@+id/monthPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="32dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/horoPicker" />
+
+                <NumberPicker
+                    android:id="@+id/dayPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/monthPicker"
+                    app:layout_constraintTop_toBottomOf="@+id/horoPicker" />
+
+            </LinearLayout>
+            <TextView
+                android:id="@+id/horoscopeResultTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:text=""
+                android:textColor="#FA628D"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/monthPicker" />
+            <Button
+                android:id="@+id/displayHoroscopeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Horoscope Checker"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/birthDatePicker" />
             <TextView
                 android:id="@+id/boardingHoroTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Please choose your horoscope"
-                android:textSize="30sp"
-                android:textColor="#FA628D"
-                android:textStyle="bold"
-                android:textAlignment="viewStart"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
+                android:text="Please choose your horoscope"
+                android:textAlignment="viewStart"
+                android:textColor="#FA628D"
+                android:textSize="30sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/boardingAgeImage"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/boardingAgeImage" />
 
             <TextView
                 android:id="@+id/boardingHoroContextSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Which of the 12 stars are you, tell us more about it"
-                android:textSize="14sp"
-                android:textColor="#424242"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:text="Which of the 12 stars are you, tell us more about it"
+                android:textColor="#424242"
+                android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/boardingAgeTitle"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/boardingAgeTitle" />
 
             <NumberPicker
                 android:id="@+id/horoPicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_gravity="center"
-                app:layout_constraintTop_toBottomOf="@+id/boardingHoroContextSmall"
-                />
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/boardingHoroContextSmall" />
 
             <Button
                 android:id="@+id/boardingHoroBtn"
@@ -70,6 +118,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Next" />
+
+
+
+
+
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
