--- a/app/src/main/res/layout/activity_report_case_detail.xml
+++ b/app/src/main/res/layout/activity_report_case_detail.xml
@@ -170,7 +170,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/textReporter">
+        android:layout_below="@id/textReporter"
+        android:visibility="gone">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnChatReporter"
